--- a/index-landingpage.html
+++ b/index-landingpage.html
@@ -211,7 +211,7 @@
     <footer id="finishfoot">
     <form id="fff">
 <br>
-    <h4 id="finsh">Copyright © 2021 Develop All Rights Reserved.</h4>
+    <h4 id="finsh">.Copyright © 2021 Develop All Rights Reserved.</h4>
     <br>
   </form>
 </footer>
